fixed the gallary scrollbar

--- a/src/components/Energy/MasonryGallery.css
+++ b/src/components/Energy/MasonryGallery.css
@@ -5,7 +5,6 @@
   width: 100vw;
   min-height: auto;
   background-color: hsl(47, 36%, 95%);
-  overflow-y: auto;
   margin-bottom: 4;
   padding: 2rem 0rem;
 }
